{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 60,
  "lineage": "3bd8d4fd-d690-767f-71e2-bed8c6fce756",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kura6_Docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:717491011807:instance/i-01ef04ca0a76bf20d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ef04ca0a76bf20d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ktest",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-098b07a552f98d41c",
            "private_dns": "ip-172-20-54-123.ec2.internal",
            "private_ip": "172.20.54.123",
            "public_ip": "44.201.255.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bfcba2568c90182a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c79fde9f9a5835cd",
            "tags": {
              "Name": "Kura6_Docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-061a8b014b5d9b3b8"
            ]
          },
          "dependencies": [
            "aws_security_group.Kura6_Security",
            "aws_subnet.Kura6_SUBNET",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kura6_Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:717491011807:instance/i-0b1aa4f41e75702e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1aa4f41e75702e2",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Ktest",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ead7e7ec4f1c9bd5",
            "private_dns": "ip-172-20-3-99.ec2.internal",
            "private_ip": "172.20.3.99",
            "public_ip": "44.203.84.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01d0039669126c4af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c79fde9f9a5835cd",
            "tags": {
              "Name": "Kura6_Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-061a8b014b5d9b3b8"
            ]
          },
          "dependencies": [
            "aws_security_group.Kura6_Security",
            "aws_subnet.Kura6_SUBNET",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kura6_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:717491011807:instance/i-06fedf17e520b8b79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fedf17e520b8b79",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ktest",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0917f0037cbbdcef3",
            "private_dns": "ip-172-20-13-239.ec2.internal",
            "private_ip": "172.20.13.239",
            "public_ip": "18.212.181.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0eb937c0642f92b69",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c79fde9f9a5835cd",
            "tags": {
              "Name": "Kura6_Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-061a8b014b5d9b3b8"
            ]
          },
          "dependencies": [
            "aws_security_group.Kura6_Security",
            "aws_subnet.Kura6_SUBNET",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Kura6_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:internet-gateway/igw-0d3e1ded788bf1697",
            "id": "igw-0d3e1ded788bf1697",
            "owner_id": "717491011807",
            "vpc_id": "vpc-0c70c836e11c06e58"
          },
          "dependencies": [
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Kura6_ROUTE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cf3105696be84318",
            "owner_id": "717491011807",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3e1ded788bf1697",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c70c836e11c06e58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Kura6_GATEWAY",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Kura6_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e93839d1d13f489b",
            "route_table_id": "rtb-0cf3105696be84318",
            "subnet_id": "subnet-0c79fde9f9a5835cd"
          },
          "dependencies": [
            "aws_internet_gateway.Kura6_GATEWAY",
            "aws_route_table.Kura6_ROUTE",
            "aws_subnet.Kura6_SUBNET",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Kura6_Security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:security-group/sg-061a8b014b5d9b3b8",
            "description": "Security group to open certain ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061a8b014b5d9b3b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Kura6_Security",
            "name_prefix": "",
            "owner_id": "717491011807",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c70c836e11c06e58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Kura6_SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:subnet/subnet-0c79fde9f9a5835cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.0.0/18",
            "id": "subnet-0c79fde9f9a5835cd",
            "map_public_ip_on_launch": true,
            "owner_id": "717491011807",
            "tags": {
              "Name": "Kura6_SUBNET"
            },
            "vpc_id": "vpc-0c70c836e11c06e58"
          },
          "dependencies": [
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Kura6_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:vpc/vpc-0c70c836e11c06e58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-07bd2eb533f28ea71",
            "default_route_table_id": "rtb-0d8c59e78800af033",
            "default_security_group_id": "sg-0c39adeafc0c47ffe",
            "dhcp_options_id": "dopt-09a1a2cfebdb7d57f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c70c836e11c06e58",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d8c59e78800af033",
            "owner_id": "717491011807",
            "tags": {
              "Name": "Kura6_VPC"
            }
          }
        }
      ]
    }
  ]
}